jEdit 4.5 version history
       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Matthieu Casanova for contributing to this release

{{{ API Changes
-New method TextArea.getVisibleLineText(lineIndex) that returns
 the visible part of the given line (Matthieu Casanova)

}}}
}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: